@@ -88,7 +88,6 @@ namespace softsusy {
 #endif
   
 #ifdef COMPILE_TWO_LOOP_GAUGE_YUKAWA 
-
   /// Threshold to prevent the re-evaluation of two-loop leading SUSY thresholds
   /// corrections. By default we set it to 10%. 
   double TWOLOOP_NUM_THRESH = 0.1;
@@ -100,7 +99,12 @@ namespace softsusy {
   /// However, the difference between the p^2 = 0 and p^2 = mb^2 cases
   /// is expected to be of O((mb/MSUSY)^2), which we can formally neglect.
   bool MB_DECOUPLING = false;
+#endif ///< COMPILE_TWO_LOOP_GAUGE_YUKAWA
 
-#endif //COMPILE_TWO_LOOP_GAUGE_YUKAWA
+#ifdef COMPILE_TWO_LOOP_SPARTICLE_MASS
+  /// Various two-loop thresholds, eg 2-loop QCD corrections to m_gluino
+  bool USE_TWO_LOOP_SPARTICLE_MASS = false;
+#endif ///< COMPILE_TWO_LOOP_SPARTICLE_MASS
+
 }
 /// end of global variable declaration
